Revert unintended UserSecurity changes